# kittenhook

./: .gitignore  .gitmodules  CMakeLists.txt
extlib/: CMakeLists.txt
extlib/imgui/: CMakeLists.txt
extlib/imgui/source/: CMakeLists.txt  imgui_draw.cpp  imgui_freetype.cpp
lib/: CMakeLists.txt
lib/apex_sdk/: CMakeLists.txt
lib/apex_sdk/include/apex_sdk/: BaseEntity.h  Offsets.h
lib/apex_sdk/source/: BaseEntity.cpp  CMakeLists.txt  EntityList.cpp  WorldToScreen.cpp
lib/memory_manager/: CMakeLists.txt
lib/memory_manager/include/memory_manager/: MemoryManager.h
lib/memory_manager/source/: MemoryManager.cpp
lib/uml/include/uml/: ProjectilePredictor.h  Vector3.h  angles.h  matrix.h
lib/uml/source/: CMakeLists.txt  ProjectilePredictor.cpp  Vector3.cpp  angles.cpp  matrix.cpp
source/: CMakeLists.txt  main.cpp
source/gui/: CMakeLists.txt
source/gui/menu/: CMakeLists.txt  Menu.cpp  Menu.h
source/gui/overlay/: CMakeLists.txt  Overlay.cpp  Overlay.h
source/hacks/: Aimbot.cpp  Aimbot.h  CMakeLists.txt
